# narrativeText2Graph

./: README.md  pyproject.toml
src/: extraction.py  graph_embedder.py  preprocess.py  sandbox.ipynb  utils.py
