[project]
name = "narrativetext2graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black[jupyter]>=25.11.0",
    "fastcoref>=2.1.6",
    "gliner>=0.2.21",
    "gliner2>=1.0.2",
    "matplotlib>=3.10.7",
    "maverick-coref>=1.0.7",
    "networkx>=3.5",
    "peft>=0.18.0",
    "spacy>=3.8.11",
    "stanza>=1.11.0",
    "tokenizers>=0.22",
    "tqdm>=4.67.1",
    "transformers>=4.57",
]
